Bug fix height overflow

--- a/src/custombox.scss
+++ b/src/custombox.scss
@@ -89,6 +89,8 @@ $effect23: #{$cb}-flash;
 .#{$content} {
   > * {
     max-width: 100%;
+    max-height: 100%;
+    overflow-y: auto;
   }
 }
 .#{$cb}-fullscreen.#{$content} {
